actually fix word wrapping in code blocks

--- a/css/typography.scss
+++ b/css/typography.scss
@@ -28,10 +28,8 @@ code {
 }
 
 .highlight {
-  word-wrap: normal;
-
   code {
-    white-space: nowrap;
+    white-space: pre;
   }
 }
 
